layout problems were fixed

--- a/achiever/src/app/achievement/achievement.component.less
+++ b/achiever/src/app/achievement/achievement.component.less
@@ -65,7 +65,10 @@
 }
 
 .content-wrapper {
+  width: auto;
   border: none;
   box-shadow: none;
   color: rgb(20, 204, 170);
+  overflow-y: visible;
+  overflow-x: hidden;
 }
