--- a/achiever/src/app/friends/friend/friend.component.css
+++ b/achiever/src/app/friends/friend/friend.component.css
@@ -65,9 +65,12 @@ body {
   max-height: 400px;
 }
 .content-wrapper {
+  width: auto;
   border: none;
   box-shadow: none;
   color: #14ccaa;
+  overflow-y: visible;
+  overflow-x: hidden;
 }
 .container {
   display: flex;
